--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   carousel_slider: ^5.1.1
   flutter_svg: ^2.2.0
   stylish_bottom_bar: ^1.1.1
+  flutter_staggered_animations: ^1.1.1
+  animate_do: ^3.0.0
 
 dev_dependencies:
   flutter_test:
